--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 .rubygems/
 .settings
 .swiftpm/
+.vs/
 .vscode/
 Carthage/
 Pods/
@@ -22,5 +23,6 @@ cmake-build-debug/
 gradlew.bat
 heapdump.*.phd
 javacore.*.txt
+obj/
 target/
 xcuserdata
